test/error-parse/dev/stderr.txt

Parse error 
/.../test/error-parse/a.js

--------------------
Unexpected token ; at (3:14) - (3:15):

 1 │ // missing second half of addition
 2 │ function hello() {
 3 │   "§ © Æ ¿" + ;
   │               ^
 4 │ }

--------------------
Unexpected identifier at (10:6) - (10:11):

 8 │ 
 9 │ 
10 │ let a aaaaa = 5;
   │       ^^^^^
11 │ export default hello;


